# gssync

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt
docs/: GSSYNC_MCP.md
docs/superpowers/plans/: 2026-05-13-gssync-mcp.md  2026-05-13-gssync.md  2026-05-19-row-level-sync.md  2026-06-05-formatting-sync.md
docs/superpowers/specs/: 2026-05-13-gssync-design.md  2026-05-13-gssync-mcp-design.md  2026-05-19-row-level-sync-design.md  2026-06-05-formatting-sync-design.md
gssync/: __main__.py  app.py  config.py  formatting.py  mcp_server.py  rows.py  sheets.py  storage.py  sync.py
tests/: test_config.py  test_formatting.py  test_mcp_server.py  test_rows.py  test_sheets_formatting.py  test_storage.py  test_sync.py
